--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,29 @@
+body {
+  cursor: url("./assets/cursor.png"), auto;
+}
+
 .App {
   text-align: center;
+  font-family: "Times New Roman", Times, serif;
+  background-image: url("./assets/sunbg.gif");
+  background-repeat: repeat;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+.App-content {
   min-height: 100vh;
+  max-width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: white;
+}
+
+.App-header {
+  padding-top: 15px;
+}
+
+.App-text {
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
